@@ -4,6 +4,10 @@ import java.util.Arrays;
 
 import mrtjp.projectred.core.BasicUtils;
 import mrtjp.projectred.core.BasicWireUtils;
+import mrtjp.projectred.core.PRColors;
+import net.minecraft.block.Block;
+import net.minecraft.client.particle.EffectRenderer;
+import net.minecraft.client.particle.EntityDiggingFX;
 import net.minecraft.client.renderer.RenderBlocks;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.item.ItemStack;
@@ -14,10 +18,14 @@ import net.minecraftforge.common.ForgeDirection;
 import codechicken.lib.data.MCDataInput;
 import codechicken.lib.data.MCDataOutput;
 import codechicken.lib.lighting.LazyLightMatrix;
+import codechicken.lib.render.IconTransformation;
+import codechicken.lib.render.RenderUtils;
 import codechicken.lib.vec.BlockCoord;
 import codechicken.lib.vec.Cuboid6;
+import codechicken.lib.vec.Translation;
 import codechicken.lib.vec.Vector3;
 import codechicken.multipart.IRedstonePart;
+import codechicken.multipart.IconHitEffects;
 import codechicken.multipart.JCuboidPart;
 import codechicken.multipart.JNormalOcclusion;
 import codechicken.multipart.NormalOcclusionTest;
@@ -146,9 +154,6 @@ public abstract class BaseLightPart extends JCuboidPart implements TSlottedPart,
     }
 
     @Override
-    public abstract String getType();
-
-    @Override
     public void update()
     {
         if (!initialized)
@@ -170,19 +175,39 @@ public abstract class BaseLightPart extends JCuboidPart implements TSlottedPart,
     
     @Override
     @SideOnly(Side.CLIENT)
-    public abstract void renderDynamic(Vector3 pos, float frame, int pass);
+    public void renderDynamic(Vector3 pos, float frame, int pass)
+    {
+        if (pass == 0 && isOn())
+            RenderHalo.addLight(x(), y(), z(), type, side, getLightBounds());
+    }
 
     @Override
     @SideOnly(Side.CLIENT)
-    public abstract void drawBreaking(RenderBlocks r);
+    public void drawBreaking(RenderBlocks r) {
+        RenderUtils.renderBlock(getLightBounds(), 0, new Translation(x(), y(), z()), new IconTransformation(r.overrideBlockTexture), null);
+    }
+    
+    @Override
+    public abstract String getType();
+    
+    @Override
+    public abstract Cuboid6 getBounds();
+
+    public abstract Cuboid6 getLightBounds();
+    
+    public abstract ItemStack getItem();
+    
+    @Override
+    public int getSlotMask()
+    {
+        return 1 << side;
+    }
 
     @Override
     public float getStrength(MovingObjectPosition hit, EntityPlayer player)
     {
         return 2;
     }
-
-    public abstract ItemStack getItem();
 
     @Override
     public Iterable<ItemStack> getDrops()
@@ -197,16 +222,10 @@ public abstract class BaseLightPart extends JCuboidPart implements TSlottedPart,
     }
 
     @Override
-    public abstract Cuboid6 getBounds();
-
-    @Override
     public boolean occlusionTest(TMultiPart npart)
     {
         return NormalOcclusionTest.apply(this, npart);
     }
-
-    @Override
-    public abstract int getSlotMask();
 
     @Override
     public Iterable<Cuboid6> getOcclusionBoxes()
